--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 * {
     box-sizing: border-box;
-}
-
-body {
     margin: 0;
     padding: 0;
 }
@@ -13,48 +10,90 @@ body {
     margin-right: auto;
 }
 
+header {
+    height: 70vh;
+    width: 100%;
+    background-image: url(../img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+header h1 {
+    color: white;
+    text-align: center;
+    padding-top: 100px;
+    font-size: 50px;
+    letter-spacing: 5px;
+}
+
+header p {
+    color: white;
+    text-align: center;
+    padding-top: 30px;
+    font-size: 24px;
+}
+
 form {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 0;
+    padding: 30px 0;
+    background-color: rgb(35,5,7);
+    border-top: solid 1px rgb(130,123,116);
+    border-bottom: solid 1px rgb(130,123,116);
 }
 
 form p {
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 24px;
 }
 
 form input {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    padding: 10px 30px;
+    padding: 15px 40px;
     text-align: left;
+    border-radius: 15px;
+    border: solid 2px rgb(35,5,7);
+    font-size: 20px;
+    text-align: center;
+}
+
+div {
+    background-color: rgb(35,5,7);
 }
 
 section {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    padding-top: 50px
 }
 
 section p {
     text-transform: uppercase;
     font-size: 20px;
-    font-weight: bold;
+    margin-top: 10px;
+    color: white;
 }
 
 article {
-    /* border: solid 1px black; */
     max-width: 220px;
     text-align: center;
     padding: 10px;
     margin-bottom: 40px;
     position: relative;
+    border-radius: 5px;
+    border: solid 1px white;
 }
 
 img {
     width: 200px;
+    border-radius: 5px;
+    margin-top: 10px;
 }
 
 .close {
@@ -62,4 +101,9 @@ img {
     position: absolute;
     right: 5px;
     top: 5px;
+    display: none;
+}
+
+article:hover .close {
+    display: block;
 }
